# cludix-totp

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
scripts/: create-icon.js  test-base32.mjs
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: AddAccountModal.tsx  TotpCard.tsx
src/utils/: base32.ts  qrParser.ts  totp.ts  uriParser.ts
