[package]
name = "cludix-totp"
version = "0.1.0"
description = "TOTP desktop application"
authors = ["yunqilee69"]
edition = "2021"

[lib]
name = "cludix_totp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = true
